[enhancement] Added basic support for Java11 modules